--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -8,6 +8,7 @@
 	width:100%;
 	height:50px;
 	background-color: white;
+    z-index: 10;
 	/*padding-bottom: 5px;*/
 }
 
@@ -26,9 +27,27 @@ section {
 }
 
 img.hero{
-    width:1010px;
-    height:741px;
+    width:400px;
+    height:300px;
+    display: block;
+    float:left;
+    padding-right: 10px;
 }
+
+h2.hero{
+    color: #575757;
+}
+
+.jumbotron {
+    /*height:100%;*/
+}
+
+#abstract{
+    font-size: x-large;
+    height:300px;
+}
+
+
 
 /*.navbar-nav li.active:after {
         content: " .";
