--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,67 +1,124 @@
-.affix-top{
-	width:100%;
-	/*height:100%;*/
+.affix-top {
+    width:100%;
+    /*height:100%;*/
     /*box-shadow: 0 10px 0;*/
 }
-
-.affix{
-	width:100%;
-	height:50px;
-	background-color: white;
+.affix {
+    width:100%;
+    height:50px;
+    background-color: white;
     z-index: 10;
-	/*padding-bottom: 5px;*/
+    /*padding-bottom: 5px;*/
 }
-
 .bigger {
-	font-size: large;
+    font-size: large;
 }
-
-.nav-active{
+.nav-active {
     background-color: #eee;
     height:100%;
-}s
-
+}
+h1 {
+    /*padding-left: 20px;*/
+    margin-top: -30px;
+}
 section {
     margin-top: -40px;
     padding-top: 40px;
 }
-
-img.hero{
+img.hero {
     width:400px;
     height:300px;
+    float:left;
+    padding: 10px;
+}
+img.group-left {
     display: block;
     float:left;
-    padding-right: 10px;
+    /*padding-right: 10px;*/
+    padding-left: 20px;
 }
-
-h2.hero{
+img.inline-left {
+    display: block;
+    float: left;
+    padding-right: 20px;
+}
+img.inline-center {
+    /*display: inline-block;*/
+    /*float:left;*/
+    padding-right: 10px;
+    padding-left: 10px;
+}
+img.inline-right {
+    display: block;
+    float:right;
+    padding-left: 10px;
+}
+img.kat {
+    width:365px;
+    height:274px;
+    padding-bottom:20px;
+}
+h2.hero {
     color: #575757;
 }
-
-.jumbotron {
+.hero-container {
+    padding: 10px;
+    text-align: center;
     /*height:100%;*/
 }
-
-#abstract{
+#overview {
+    /*margin-top: -40px;*/
+    margin-top: 50px;
+    background-color: #eee;
+    border-radius: 10px;
+    padding-top: 0px;
+    /*width:100%;*/
+    /*height:100%;*/
+    /*text-align: center;*/
+}
+#abstract {
     font-size: x-large;
-    height:300px;
+    margin-top: 10px;
+}
+p {
+    padding-left: 10px;
+}
+#footer {
+    text-align: center;
+}
+@media only screen and (min-width: 900px) {
+    #pcblayout {
+        width:60%;
+    }
+    #pcb {
+        width:60%;
+    }
+    #vid{
+        width:640px;
+        height: 360px;
+    }
+    #arch{
+        width:100%;
+    }
+}
+@media only screen and (min-width: 1000px) {
+    #pcblayout {
+        width:30%;
+    }
+    #pcb {
+        width:35%;
+        display: inline;
+        float: right;
+    }
+    #vid{
+        width: 853px;
+        height: 480px;
+    }
+    #arch{
+        width:70%;
+    }
 }
 
-
-
-/*.navbar-nav li.active:after {
-        content: " .";
-        display: block;
-        text-indent: -99em;
-        border-bottom: 0.8em solid #fff;
-        border-left: 0.8em solid transparent;
-        border-right: 0.8em solid transparent;
-        border-top: none;
-        height: 0px;
-        margin-left: -.8em;
-        margin-right: auto;
-        margin-top: 3px;
-        position: absolute;
-        left: 50%;
-        width: 1px; 
-    }*/
+.img-center-container {
+    text-align: center;
+}
